Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-disk-utility gnome-disk-utility
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 177
    • Issues 177
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1
    • Merge requests 1
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • gnome-disk-utilitygnome-disk-utility
  • Issues
  • #238

Closed
Open
Created Jan 22, 2022 by Emilio Cobos Álvarez@emilio

Crash on ensure_unused_cb

Trying to format a USB drive, gnome-disks crashes in strlen(erase_type) because erase_type is null:

(gdb) bt
#0  ensure_unused_cb (window=<optimized out>, res=<optimized out>, user_data=0x55bd00928cb0) at ../src/disks/gduformatdiskdialog.c:355
#1  ensure_unused_cb (window=<optimized out>, res=<optimized out>, user_data=user_data@entry=0x55bd00928cb0) at ../src/disks/gduformatdiskdialog.c:335
#2  0x00007fa0b76874aa in g_task_return_now (task=0x55bd00902540) at ../gio/gtask.c:1223
#3  0x00007fa0b76876ab in g_task_return (type=<optimized out>, task=0x55bd00902540) at ../gio/gtask.c:1293
#4  g_task_return (task=0x55bd00902540, type=<optimized out>) at ../gio/gtask.c:1249
#5  0x000055bd00243f50 in ensure_list_cb (source_object=<optimized out>, res=<optimized out>, user_data=user_data@entry=0x55bd0071ba90) at ../src/disks/gduwindow.c:4358
#6  0x00007fa0b76874aa in g_task_return_now (task=0x7fa09000bbe0) at ../gio/gtask.c:1223
#7  0x00007fa0b76874ed in complete_in_idle_cb (task=task@entry=0x7fa09000bbe0) at ../gio/gtask.c:1237
#8  0x00007fa0b748f67b in g_idle_dispatch (source=0x55bd00935f30, callback=0x7fa0b76874e0 <complete_in_idle_cb>, user_data=0x7fa09000bbe0) at ../glib/gmain.c:5929
#9  0x00007fa0b7493340 in g_main_dispatch (context=0x55bd0034b590) at ../glib/gmain.c:3413
#10 g_main_context_dispatch (context=0x55bd0034b590) at ../glib/gmain.c:4131
#11 0x00007fa0b74e83c8 in g_main_context_iterate.constprop.0 (context=context@entry=0x55bd0034b590, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4207
#12 0x00007fa0b7490b43 in g_main_context_iteration (context=context@entry=0x55bd0034b590, may_block=may_block@entry=1) at ../glib/gmain.c:4272
#13 0x00007fa0b76b5a25 in g_application_run (application=0x55bd003490f0, argc=<optimized out>, argv=<optimized out>) at ../gio/gapplication.c:2569
#14 0x000055bd00223072 in main (argc=2, argv=0x7ffcbb38c858) at ../src/disks/main.c:27

This is the screen I see before the crash:

image

Then:

image

Then "Format" crashes, regardless of what I choose in the previous dialog.

$ sudo dnf info gnome-disk-utility                                                                                                                                                                                                        
Last metadata expiration check: 3:24:22 ago on Sat 22 Jan 2022 01:55:04 PM CET.
Installed Packages
Name         : gnome-disk-utility
Version      : 42~alpha
Release      : 2.fc36
Architecture : x86_64
Size         : 6.4 M
Source       : gnome-disk-utility-42~alpha-2.fc36.src.rpm
Repository   : @System
From repo    : rawhide
Summary      : Disks
URL          : https://gitlab.gnome.org/GNOME/gnome-disk-utility
License      : GPLv2+
Description  : This package contains the Disks and Disk Image Mounter applications.
             : Disks supports partitioning, file system creation, encryption,
             : fstab/crypttab editing, ATA SMART and other features
Assignee
Assign to
Time tracking