Restore old window destruction to fix data retrieval

The refactor in ff4c7021d3b1dd053fd9f602f7b494e7fd3a218b
used an early destruction of the dialog window which caused the
retrieval of the combo box value to fail.

Restore the old flow of hiding the window only and let the
destruction be done by the format_disk_data_free call.

Fixes https://gitlab.gnome.org/GNOME/gnome-disk-utility/-/issues/238